--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
+    "antd": "^5.27.4",
     "buffer": "^6.0.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
