--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.23.0",
     "yup": "^1.7.0"
   },
   "devDependencies": {
