--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.22",
     "governance-idl-sdk": "^0.0.4",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
