--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "swal": "^0.1.0",
     "sweetalert2": "^11.23.0",
